fix flex bug on mobile in links

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,12 @@
   overflow: hidden;
 }
 
+.links-section-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 @media (max-width: 767px) {
   .main-container {
     flex-direction: column;
